# coach-ai

./: .env.example  MVP.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/app/: main.py
backend/src/app/api/routes/: assistants.py  calls.py  sessions.py  users.py
backend/src/app/core/: config.py  supabase.py
backend/src/app/crud/: assistants.py
backend/src/app/models/: assistants.py
migrations/: 20240321163628_initial_schema.sql
plans/: architecture.md
